--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
   }
   
   .hero {
-    background: url('https://images.unsplash.com/photo-1527443154391-507e9dc6c5cc?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80') no-repeat center center/cover;
+    background: url('https://www.cyberpowerpc.com/blog/w/wp-content/uploads/2021/09/genshin-impact-raiden-shogun.jpg') no-repeat center center/cover;
     height: 100vh;
     position: relative;
   }
@@ -28,8 +28,8 @@ body, html {
   
   .glow {
     font-size: 4rem;
-    color: #0ff;
-    text-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
+    color: rgb(111, 0, 255);
+    text-shadow: 0 0 10px rgb(111, 0, 255), 0 0 20px rgb(111, 0, 255), 0 0 30px rgb(111, 0, 255);
     margin: 0.2em;
   }
   
@@ -37,13 +37,13 @@ body, html {
     font-size: 1.5rem;
     margin-top: 1rem;
     color: #fff;
-    text-shadow: 0 0 5px #0ff;
+    text-shadow: 0 0 5px rgb(111, 0, 255);
   }
   
   .cta {
     margin-top: 2rem;
     padding: 1rem 2rem;
-    background: #0ff;
+    background: rgb(111, 0, 255);
     border: none;
     border-radius: 30px;
     font-size: 1.2rem;
@@ -53,7 +53,7 @@ body, html {
   }
   
   .cta:hover {
-    background: #00f0f0;
+    background: rgb(111, 0, 255);
     transform: scale(1.1);
   }
   
