--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body, html {
     display: flex;
     justify-content: center;
     gap: 2rem;
-    background-color: rgba(0, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 1rem;
     position: fixed;
     width: 100%;
@@ -72,7 +72,7 @@ body, html {
   
   .navbar a {
     text-decoration: none;
-    color: #0ff;
+    color: rgb(111, 0, 255);
     font-size: 1.2rem;
     font-weight: bold;
     transition: color 0.3s, transform 0.3s;
