--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Comic Neue', 'Noto Sans', sans-serif;
     height: 100%;
     background: #0f0f0f;
     color: white;
@@ -10,7 +10,7 @@ body, html {
   }
   
   .hero {
-    background: url('https://www.cyberpowerpc.com/blog/w/wp-content/uploads/2021/09/genshin-impact-raiden-shogun.jpg') no-repeat center center/cover;
+   
     height: 100vh;
     position: relative;
   }
@@ -81,6 +81,10 @@ body, html {
   .navbar a:hover {
     color: #fff;
     transform: scale(1.1);
+  }
+
+  a{
+    text-decoration: none;
   }
   
 
